[package]
name = "sql_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo"] }
itertools = "0.10.5"
md4 = "0.10.2"
md5 = "0.7.0"
nom = "7.1.3"
sha1 = "0.10.5"
sha2 = "0.10.6"
